--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +9,6 @@
 
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <!-- Navbar Section Start -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -34,52 +32,72 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Testimonials</a>
           </li>
-
-
         </ul>
-
-
         <button class="btn button" type="submit">Contact Me</button>
       </div>
     </div>
   </nav>
   <!-- Navbar Section End -->
-  <!-- Hero Section Start -->
-  <!doctype html>
-  <html lang="en">
-
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  </head>
-
-  <body>
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6"> <img src="images/hero_section_img.png"
-            class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy"> </div>
-        <div class="col-lg-6">
-          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">I create <span class="para">product design </span> and brand experience</h1>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-            elementum tristique.</p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn  herobtn btn-lg px-4 me-md-2">Get In Touch
-            </button>
-          </div>
-        </div>
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
-  </body>
-
-  </html>
-  <!-- Hero Section End -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
+  <div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6"> <img src="images/banner_img.png" class="d-block mx-lg-auto img-fluid"
+          alt="Bootstrap Themes" width="700" height="500" loading="lazy"> </div>
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">I create <span class="para">product design </span>
+          and brand experience</h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+          elementum tristique.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <button type="button" class="btn  herobtn btn-lg px-4 me-md-2">Get In Touch
+          </button>
+        </div>
+      </div>
+    </div>
+<!-- Hero Section End -->
+<!-- Gallery Section Start -->
+      <div><h5>My Skills</h5></div>      
+        <h1><b>My Expertise</b></h1>
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
+  <div class="col gallery align-items-start"> 
+    <div class="image"><img src="images/Strategy & Direction.png" alt=""></div>
+    <div>
+      <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Strategy & Direction</h3>
+    </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+          elementum tristique.</p>
+  </div>
+  <div class="col gallery align-items-start"> 
+    <div class="image"><img src="images/tag 1.png" alt=""></div>
+    <div>
+      <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Branding & Logo</h3>
+    </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+          elementum tristique.</p>
+  
+  </div>
+  <div class="col gallery align-items-start"> 
+    <div class="image"><img src="images/UI & UX Design.png" alt=""></div>
+    <div>
+      <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">UI & UX Design</h3>
+    </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+          elementum tristique.</p>
+    
+  </div>
+  <div class="col gallery align-items-start"> 
+    <div class="image"><img src="images/Webflow Development.png" alt=""></div>
+    <div>
+      <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Webflow Development</h3>
+    </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+          elementum tristique.</p>
+  </div>
+</div>
+<!-- Gallery Section End -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
