Navbar to Footer Section Done

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     crossorigin="anonymous"></script>
   <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-      <div class="col-10 col-sm-8 col-lg-6"> <img src="images/banner_img.png" class="d-block mx-lg-auto img-fluid"
+      <div class="col-10 col-sm-8 col-lg-6"> <img src="images/hero_section_img.png" class="d-block mx-lg-auto img-fluid"
           alt="Bootstrap Themes" width="700" height="500" loading="lazy"> </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">I create <span class="para">product design </span>
@@ -97,6 +97,135 @@
   </div>
 </div>
 <!-- Gallery Section End -->
+ <!-- About Me Section Start -->
+<section class="py-5">
+  <div class="container">
+    <div class="row align-items-center">
+
+      <div class="col-lg-6 mb-4 mb-lg-0 text-center">
+        <div class="position-relative d-inline-block">
+          <div class="position-absolute top-0 start-0 w-100 h-100 rounded-4 translate-middle"
+               style="z-index:-1;"></div>
+
+          <img src="images/About Me.png" alt="Profile" class="img-fluid rounded-3">
+        </div>
+      </div>
+
+      <div class="col-lg-6">
+        <span class="text-secondary fw-medium">About</span>
+        <h2 class="fw-bold display-6 mb-4">About Me</h2>
+
+        <p class="text-secondary">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius
+          faucibus massa sollicitudin amet augue. Nibh metus a semper purus
+          mauris duis. Lorem eu neque, tristique quis duis. Nibh scelerisque
+          ac adipiscing velit non nulla in amet pellentesque.
+        </p>
+
+        <p class="text-secondary">
+          Sit turpis pretium eget maecenas. Vestibulum dolor mattis consectetur
+          eget commodo vitae. Amet pellentesque sit pulvinar lorem mi a,
+          euismod risus.
+        </p>
+      </div>
+
+    </div>
+  </div>
+
+</section>
+<!-- About Me Section End -->
+ <!-- My Projects Section Start -->
+   <section class="py-5">
+  <div class="container">
+    <div class="row g-4">
+
+      <div class="col-lg-4 col-md-6">
+        <div class="border rounded-4 overflow-hidden h-100">
+          <img src="images/Ahuse.png" class="img-fluid w-100" alt="Ahuse">
+          <div class="p-4">
+            <h5 class="fw-semibold">Ahuse</h5>
+            <p class="text-secondary">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse varius enim in eros.
+            </p>
+            <a href="#" class="fw-medium text-primary text-decoration-none">
+              View in Dribbble →
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <div class="border rounded-4 overflow-hidden h-100">
+          <img src="images/App Dashboard.png" class="img-fluid w-100" alt="App Dashboard">
+          <div class="p-4">
+            <h5 class="fw-semibold">App Dashboard</h5>
+            <p class="text-secondary">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse varius enim in eros.
+            </p>
+            <a href="#" class="fw-medium text-primary text-decoration-none">
+              View in Dribbble →
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <div class="border rounded-4 overflow-hidden h-100">
+          <img src="images/Easy Rent.png" class="img-fluid w-100" alt="Easy Rent">
+          <div class="p-4">
+            <h5 class="fw-semibold">Easy Rent</h5>
+            <p class="text-secondary">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse varius enim in eros.
+            </p>
+            <a href="#" class="fw-medium text-primary text-decoration-none">
+              View in Dribbble →
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+ <!-- My Projects Section End -->
+  <!-- Customer testimonials Section Start -->
+   <div class="container my-5">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+
+        <div class="col">
+            <div class="card h-100">
+                <img src="images/Stars.png" class="card-img-top" alt="Stars">
+                <div class="card-body">
+                    <h5 class="card-title"><p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                       Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra".</p></h5>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="images/Stars.png" class="card-img-top" alt="Stars">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title 2</h5>
+                    <p class="card-text">This is the second card’s description text.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <img src="images/Stars.png" class="card-img-top" alt="Stars">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title 3</h5>
+                    <p class="card-text">This is the third card’s description text.</p>
+                </div>
+            </div>
+          </div>
+    </div>
+</div>
+  <!-- Customer testimonials Section End -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
