--- a/index.html
+++ b/index.html
@@ -191,41 +191,97 @@
   </div>
 </section>
  <!-- My Projects Section End -->
-  <!-- Customer testimonials Section Start -->
-   <div class="container my-5">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-
-        <div class="col">
-            <div class="card h-100">
-                <img src="images/Stars.png" class="card-img-top" alt="Stars">
-                <div class="card-body">
-                    <h5 class="card-title"><p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                       Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra".</p></h5>
-                    
-                </div>
-            </div>
+   <!-- Form Section Start -->
+<div class="container">
+  <form>
+    <div class="row mb-4">
+      <div class="col">
+        <div class="form-outline">
+          <label class="form-label" for="firstName">First name</label>
+          <input type="text" id="firstName" class="form-control">
         </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="images/Stars.png" class="card-img-top" alt="Stars">
-                <div class="card-body">
-                    <h5 class="card-title">Card Title 2</h5>
-                    <p class="card-text">This is the second card’s description text.</p>
-                </div>
-            </div>
+      </div>
+      <div class="col">
+        <div class="form-outline">
+          <label class="form-label" for="lastName">Last name</label>
+          <input type="text" id="lastName" class="form-control">
         </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="images/Stars.png" class="card-img-top" alt="Stars">
-                <div class="card-body">
-                    <h5 class="card-title">Card Title 3</h5>
-                    <p class="card-text">This is the third card’s description text.</p>
-                </div>
-            </div>
-          </div>
+      </div>
     </div>
+
+    <div class="row mb-4">
+      <div class="col">
+        <div class="form-outline">
+          <label class="form-label" for="email">Email</label>
+          <input type="email" id="email" class="form-control">
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-outline">
+          <label class="form-label" for="phone">Phone Number</label>
+          <input type="text" id="phone" class="form-control">
+        </div>
+      </div>
+    </div>
+
+    <div class="mb-4">
+      <label class="form-label">Choose a topic</label>
+      <select class="form-control">
+        <option value="">Select one...</option>
+        <option value="1">Topic 1</option>
+        <option value="2">Topic 2</option>
+        <option value="3">Topic 3</option>
+        <option value="4">Topic 4</option>
+        <option value="5">Topic 5</option>
+      </select>
+    </div>
+
+    <div class="form-outline mb-4">
+      <label class="form-label" for="message">Message</label>
+      <textarea class="form-control" id="message" rows="4" placeholder="Type your message..."></textarea>
+    </div>
+
+    <div class="form-check mb-4">
+      <input class="form-check-input" type="checkbox" id="terms" checked>
+      <label class="form-check-label" for="terms">
+        I accept the terms
+      </label>
+    </div>
+
+    <button type="submit" class="btn btn-primary btn-block w-100">
+      Submit
+    </button>
+  </form>
 </div>
-  <!-- Customer testimonials Section End -->
+   <!-- Form Section End -->
+    <!-- Footer Section Start -->
+      <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <p class="col-md-4 mb-0 text-body-secondary">© 2025 Company, Inc</p> <a href="/"
+            class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+            aria-label="Bootstrap"> <svg class="bi me-2" width="40" height="32" aria-hidden="true">
+              <use xlink:href="#bootstrap"></use>
+            </svg> </a>
+          <ul class="nav col-md-4 justify-content-end">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Portfolio</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About Me</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Testimonials</a></li>
+          </ul>
+          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-body-secondary" href="#" aria-label="Instagram"><svg class="bi" width="24"
+                  height="24" aria-hidden="true">
+                  <use xlink:href="#instagram"></use>
+                </svg></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#" aria-label="Facebook"><svg class="bi" width="24"
+                  height="24">
+                  <use xlink:href="#facebook"></use>
+                </svg></a></li>
+          </ul>
+        </footer>
+      </div>
+    <!-- Footer Section End -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
